==
  * Minor Enhancements
    * Output informative message if RDiscount is not available [github.com/JackDanger]
  * Bug Fixes
    * Prevent Jekyll from picking up the output directory as a source [github.com/JackDanger]
    * Skip related_posts when there is only one post [github.com/JackDanger]

== 0.1.4 / 2008-12-08
  * Bug Fixes
    * DATA does not work properly with rubygems

== 0.1.3 / 2008-12-06
  * Major Features
    * Markdown support [github.com/vanpelt]
    * Mephisto and CSV converters [github.com/vanpelt]
    * Code hilighting [github.com/vanpelt]
    * Autobuild
  * Bug Fixes
    * Accept both \r\n and \n in YAML header [github.com/vanpelt]

== 0.1.2 / 2008-11-22
  * Major Features
    * Add a real "related posts" implementation using Classifier
  * Command Line Changes
    * Allow cli to be called with 0, 1, or 2 args intuiting dir paths
      if they are omitted

== 0.1.1 / 2008-11-22
  * Minor Additions
    * Posts now support introspectional data e.g. {{ page.url }}

== 0.1.0 / 2008-11-05
  * First release
    * Converts posts written in Textile
    * Converts regular site pages
    * Simple copy of binary files

== 0.0.0 / 2008-10-19
  * Birthday!
